{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 2589,
  "lineage": "5336eb65-66fd-822c-c71b-ad8bb712c197",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d61145d95f1216cf",
            "arn": "arn:aws:ec2:us-east-1:076718501063:elastic-ip/eipalloc-0d61145d95f1216cf",
            "domain": "vpc",
            "id": "eipalloc-0d61145d95f1216cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-88-242-251.compute-1.amazonaws.com",
            "public_ip": "54.88.242.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073938cb814357634",
            "arn": "arn:aws:ec2:us-east-1:076718501063:elastic-ip/eipalloc-073938cb814357634",
            "domain": "vpc",
            "id": "eipalloc-073938cb814357634",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-202-161.compute-1.amazonaws.com",
            "public_ip": "54.84.202.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:internet-gateway/igw-0f935fb48d63841f2",
            "id": "igw-0f935fb48d63841f2",
            "owner_id": "076718501063",
            "tags": {
              "Name": "cloud_project_my_internet_gateway"
            },
            "tags_all": {
              "Name": "cloud_project_my_internet_gateway"
            },
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "dependencies": [
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d61145d95f1216cf",
            "association_id": "eipassoc-005e2ab63cdacd701",
            "connectivity_type": "public",
            "id": "nat-0b627b4c09fa59be6",
            "network_interface_id": "eni-054961e9f314dde26",
            "private_ip": "10.0.1.176",
            "public_ip": "54.88.242.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b104da6f8f286e0b"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073938cb814357634",
            "association_id": "eipassoc-075e785656483ea25",
            "connectivity_type": "public",
            "id": "nat-0f2fd23e0949f40ab",
            "network_interface_id": "eni-016c09af342bdcc4c",
            "private_ip": "10.0.2.244",
            "public_ip": "54.84.202.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8853f272d0af03a"
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:route-table/rtb-0c9fc87311849078f",
            "id": "rtb-0c9fc87311849078f",
            "owner_id": "076718501063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b627b4c09fa59be6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud_project_private_route_table"
            },
            "tags_all": {
              "Name": "cloud_project_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:route-table/rtb-00fd0e56a935c3478",
            "id": "rtb-00fd0e56a935c3478",
            "owner_id": "076718501063",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f935fb48d63841f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud_project_public_route_table"
            },
            "tags_all": {
              "Name": "cloud_project_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07afac2a27b861830",
            "route_table_id": "rtb-0c9fc87311849078f",
            "subnet_id": "subnet-068549a774103bc6c"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb167579f6402b0",
            "route_table_id": "rtb-0c9fc87311849078f",
            "subnet_id": "subnet-0f6d39ab6222bbe79"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9a5545a9a727b6b",
            "route_table_id": "rtb-00fd0e56a935c3478",
            "subnet_id": "subnet-0b104da6f8f286e0b"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021108a4f6b36abdb",
            "route_table_id": "rtb-00fd0e56a935c3478",
            "subnet_id": "subnet-0b8853f272d0af03a"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:subnet/subnet-068549a774103bc6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068549a774103bc6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076718501063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_project_private_subnet_1"
            },
            "tags_all": {
              "Name": "cloud_project_private_subnet_1"
            },
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "dependencies": [
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:subnet/subnet-0f6d39ab6222bbe79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6d39ab6222bbe79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076718501063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_project_private_subnet_2"
            },
            "tags_all": {
              "Name": "cloud_project_private_subnet_2"
            },
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "dependencies": [
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:subnet/subnet-0b104da6f8f286e0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b104da6f8f286e0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076718501063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_project_public_subnet_1"
            },
            "tags_all": {
              "Name": "cloud_project_public_subnet_1"
            },
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "dependencies": [
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:subnet/subnet-0b8853f272d0af03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8853f272d0af03a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076718501063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_project_public_subnet_2"
            },
            "tags_all": {
              "Name": "cloud_project_public_subnet_2"
            },
            "vpc_id": "vpc-0f68711c910cc82fa"
          },
          "dependencies": [
            "aws_vpc.cloud_term_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud_term_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076718501063:vpc/vpc-0f68711c910cc82fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0495373fc8fff63cb",
            "default_route_table_id": "rtb-07142289903c1bbbb",
            "default_security_group_id": "sg-0bcc88747e5fccfb0",
            "dhcp_options_id": "dopt-0184f9549be6c2212",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f68711c910cc82fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07142289903c1bbbb",
            "owner_id": "076718501063",
            "tags": {
              "Name": "cloud_project_vpc"
            },
            "tags_all": {
              "Name": "cloud_project_vpc"
            }
          }
        }
      ]
    }
  ]
}